--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "foo",
-  "version": "0.0.0",
+  "name": "dlsdocs",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
